force-app/main/default/objects/cgcloud__Logging_Setting__mdt/cgcloud__Logging_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Logging Configuration within the CGCloud Application</description>
    <label>Logging Setting</label>
    <pluralLabel>Logging Settings</pluralLabel>
</CustomObject>