force-app/main/default/objects/cgcloud__Logging_Setting__mdt/fields/cgcloud__Activate_SFDC_Logging__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Activate_SFDC_Logging__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this is activated the Application will emit logs to SFDC logs</description>
    <label>Activate SFDC Logging</label>
    <type>Checkbox</type>
</CustomField>