force-app/main/default/objects/cgcloud__Logging_Setting__mdt/fields/cgcloud__Activate_Transaction_Logging__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Activate_Transaction_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is activated the Application will emit entries to the Transaction Log SObject without any filter</description>
    <label>Activate Transaction Logging</label>
    <type>Checkbox</type>
</CustomField>