force-app/main/default/objects/cgcloud__Logging_Setting__mdt/fields/cgcloud__End_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__End_Time__c</fullName>
    <description>The time to stop logging the transactions after this defined time.</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>