force-app/main/default/objects/cgcloud__Logging_Setting__mdt/fields/cgcloud__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Start_Time__c</fullName>
    <description>The time to start logging the transactions after this defined time.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>