force-app/main/default/objects/cgcloud__Logging_Setting__mdt/fields/cgcloud__Transaction_Log_Size__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transaction_Log_Size__c</fullName>
    <defaultValue>1000000</defaultValue>
    <label>Transaction Log Size</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>