force-app/main/default/objects/cgcloud__Logging_Setting__mdt/validationRules/cgcloud__Start_Time_End_Time_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Start_Time_End_Time_Validation</fullName>
    <active>true</active>
    <description>Start time can&apos;t be later than end time.</description>
    <errorConditionFormula>cgcloud__Start_Time__c &gt; cgcloud__End_Time__c</errorConditionFormula>
    <errorMessage>Start time can&apos;t be later than end time.</errorMessage>
</ValidationRule>