force-app/main/default/objects/cgcloud__Logging_Setting__mdt/validationRules/cgcloud__Transaction_Logs_Time_Frame.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Transaction_Logs_Time_Frame</fullName>
    <active>true</active>
    <description>The time frame for logging transaction logs cannot be greater than 1 hour.</description>
    <errorConditionFormula>cgcloud__End_Time__c - cgcloud__Start_Time__c &gt; 1/24</errorConditionFormula>
    <errorMessage>The time frame for logging transaction logs cannot be greater than 1 hour.</errorMessage>
</ValidationRule>